--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
   "dependencies": {
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "typescript": "^5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4"
-    
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
